--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -8,20 +8,22 @@
   width: $sidebar-width;
   display: flex;
   box-shadow: 5px 5px 10px #00000067;
+  z-index: 999;
 
   .nav {
     padding-top: 70px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     .nav-item {
       color: white;
-      padding-top: 60px;
-      padding-bottom: 20px;
+
+      text-align: center;
 
       .nav-label {
         visibility: hidden;
-        font-family: "Karla", sans-serif;
+        font-family: $font;
+        transition: transform 0.3s;
       }
       &:hover > a > .nav-label {
         visibility: initial;
@@ -30,40 +32,51 @@
       }
     }
   }
-}
+  i {
+    color: white;
+    transition: transform 0.3s;
+    padding: 50px 50px 20px 50px;
+  }
 
-i {
-  color: white;
-}
+  i:active {
+    color: white;
+  }
 
-i:active {
-  color: white;
-}
+  i:hover {
+    color: white;
+  }
 
-i:hover {
-  color: white;
-}
+  i:visited {
+    color: white;
+  }
 
-i:visited {
-  color: white;
-}
+  i:link {
+    color: white;
+  }
 
-i:link {
-  color: white;
-}
+  h1 {
+    font-size: 50px;
+    font-weight: bolder;
+    font-family: "Bebas Neue", cursive;
+    justify-content: center;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
 
-h1 {
-  font-size: 50px;
-  font-weight: bolder;
-  font-family: "Bebas Neue", cursive;
-  justify-content: center;
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 20px;
-}
+  hr {
+    background: $secondary-color;
+    height: 3px;
+    width: $sidebar-width;
+  }
 
-hr {
-  background: $secondary-color;
-  height: 3px;
-  width: $sidebar-width;
+  .active {
+    i {
+      color: #db21e2;
+    }
+  }
+
+  i:hover {
+    transform: scale(1.2);
+  }
 }
