--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -5,6 +5,9 @@
   h1 {
     color: white;
     font-family: $font;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
   }
 
   .Presentation {
@@ -12,9 +15,13 @@
     justify-content: center;
     color: white;
     margin-top: 100px;
+    margin-left: 20%;
     position: relative;
     font-family: $font;
-
+    background-color: $primary-color;
+    width: 1000px;
+    height: 350px;
+    box-shadow: 10px 10px 10px #00000094;
     img {
       width: 300px;
       height: 300px;
@@ -39,6 +46,43 @@
       font-family: $font;
       text-align: justify;
       text-justify: inter-word;
+    }
+  }
+  h3 {
+    color: white;
+    font-family: $font;
+    text-align: center;
+    padding-top: 100px;
+    font-size: 35px;
+  }
+  .Interests {
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin-top: 100px;
+    margin-left: 20%;
+    position: relative;
+    font-family: $font;
+    background-color: $primary-color;
+    width: 1000px;
+    height: 350px;
+    box-shadow: 10px 10px 10px #00000094;
+    .col {
+      display: flex;
+      justify-content: space-around;
+
+      i {
+        color: $white;
+        padding-bottom: 50px;
+        &:hover {
+          color: $secondary-color;
+          cursor: default;
+        }
+        span {
+          padding: 10px;
+          font-family: $font;
+        }
+      }
     }
   }
 }
