--- a/src/scss/resume.scss
+++ b/src/scss/resume.scss
@@ -1,5 +1,9 @@
 .Resume {
   h1 {
     color: white;
+    font-family: $font;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
   }
 }
