--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #000b1a;
-$secondary-color: #db21e2;
+$secondary-color: #21e2e2;
 $text-color: #ffffff;
 $background-color: #000b1a;
 
